logs/freyja_examples/build.make.042.log.stderr
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp: In member function ‘void DroneType::takeOff(int, char**)’:
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:106:62: error: ‘gestureUpdate’ was not declared in this scope
  106 |         cameraStuff = nh.subscribe( "/gesture/hand_sign", 1, gestureUpdate );
      |                                                              ^~~~~~~~~~~~~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp: In function ‘void gestureUpdate(const ConstPtr&)’:
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:133:11: error: request for member ‘forward’ in ‘drone’, which is of non-class type ‘DroneType()’
  133 |     drone.forward();
      |           ^~~~~~~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:134:5: error: ‘elif’ was not declared in this scope
  134 |   } elif (msg -> data == "Turn Right"){
      |     ^~~~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp: In function ‘int main(int, char**)’:
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:147:9: error: request for member ‘takeOff’ in ‘drone’, which is of non-class type ‘DroneType()’
  147 |   drone.takeOff(argc, argv);
      |         ^~~~~~~
make[2]: *** [CMakeFiles/temporal_provider_node.dir/build.make:76: CMakeFiles/temporal_provider_node.dir/src/temporal_provider.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:967: CMakeFiles/temporal_provider_node.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
